--- a/iOS/Kefi/Kefi-Info.plist
+++ b/iOS/Kefi/Kefi-Info.plist
@@ -28,6 +28,14 @@
 				<string>fb443646799115032</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kefiCallback</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.foursquare.oauthexample</string>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
