stab at foursquare, and sorting
changed so that question.png = 0 in dictionary for sorting reasons

--- a/iOS/Kefi/Kefi-Info.plist
+++ b/iOS/Kefi/Kefi-Info.plist
@@ -31,7 +31,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>kefiCallback</string>
+				<string>https://kefiCallback</string>
 			</array>
 			<key>CFBundleURLName</key>
 			<string>com.foursquare.oauthexample</string>
