pushing some changes
not really sure if this will mitigate your issue.

--- a/iOS/Kefi/Kefi-Info.plist
+++ b/iOS/Kefi/Kefi-Info.plist
@@ -23,6 +23,8 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.kefiCallback.app</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>https://kefiCallback</string>
